# apigeex_client

./: .gitignore  MANIFEST.in  README.md  api_list.yaml  generate_api_list.py  generate_clients.py  requirements.txt  setup.py  wrapper.py
apigeex_client/: client_config.yaml  wrapper.py
apigeex_client/clients/clinical_trials/: client.py
apigeex_client/clients/hls_search/: README.md  __init__.py  (+2 more)
apigeex_client/data/: api_list.yaml
clients/clinical_trials/: README.md  __init__.py  config.json  pyproject.toml
clients/clinical_trials/api/v_1_search/: first_study_v_1_first_get.py  nct_numbers_v_1_nct_numbers_get.py
clients/clinical_trials/models/: study_resource_study_metadata_json_type_0.py  study_response.py
clients/llm_azure_openai/: config.json  pyproject.toml
clients/llm_azure_openai/api/default/: chat_completions_create.py
clients/llm_azure_openai/models/: chat_completion_function_parameters.py  chat_completion_functions.py  chat_completion_response_message_function_call.py  chat_completions_response_common_usage.py  create_chat_completion_request_function_call_type_1.py  create_chat_completion_response.py  create_chat_completion_response_choices_item.py  embeddings_create_response_200.py  inner_error_code.py
clients/lpr/: README.md  pyproject.toml
examples/: clinical_trials_search.py  hls_search.py  lpr_search.py  openai_chat.py
specs/: clinical_trials.yaml  hls_search.yaml  llm_azure_openai.yaml  lpr.yaml
tests/: clinical_trials.py  lpr.py  openai-testing 8.ipynb  quick_test.ipynb  test_openai_llm.py  trials_example.html  trials_example.json
(+110 files in other folders)
