[tool.poetry]
name = "ai-factory-product-build-azure-openai-client"
version = "0.0.1"
description = "A client library for accessing ai-factory-product-build-azure-openai"
authors = []
readme = "README.md"
packages = [
    {include = "ai_factory_product_build_azure_openai_client"},
]
include = ["CHANGELOG.md", "ai_factory_product_build_azure_openai_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
